--- a/product.html
+++ b/product.html
@@ -4,83 +4,50 @@
 <meta charset="UTF-8">
 <title>Product Details</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <style>
-body{
-    font-family: Arial;
-    padding:20px;
-}
-.product-box{
-    max-width:400px;
-    margin:auto;
-}
-.product-box img{
-    width:100%;
-}
-.price{
-    color:red;
-    font-size:22px;
-}
-.oldprice{
-    text-decoration: line-through;
-    color:gray;
-}
-.buy-btn{
-    background:green;
-    color:white;
-    padding:10px;
-    display:inline-block;
-    margin-top:15px;
-    text-decoration:none;
-}
+body{font-family:Arial;padding:20px;}
+img{width:100%;}
+.price{color:red;font-size:22px;}
+.old{text-decoration:line-through;color:gray;}
+.btn{background:green;color:white;padding:10px;text-decoration:none;display:block;text-align:center;margin-top:10px;}
 </style>
 </head>
-
 <body>
 
-<div class="product-box">
-    <img id="pimage">
-    <h2 id="pname"></h2>
-    <p class="oldprice" id="poldprice"></p>
-    <p class="price" id="pprice"></p>
-    <p id="pdesc"></p>
-
-    <a href="checkout.html" class="buy-btn">Order Now</a>
-</div>
+<div id="productBox"></div>
 
 <script>
 
-// 🔴 এখানে তোমার Apps Script URL বসাও
-const apiURL = "PASTE_YOUR_APPS_SCRIPT_URL_HERE";
+const API="https://script.google.com/macros/s/AKfycbzOkxgutucJ1fsLTLCHAOjCD3UqzoiYNJKmM1UM32aQZqgy1HZOqlSQvixPu2IZaJv3/exec";
 
-const urlParams = new URLSearchParams(window.location.search);
-const productId = urlParams.get("id");
+const params=new URLSearchParams(window.location.search);
+const id=params.get("id");
 
-if(!productId){
-    document.body.innerHTML = "<h2>No Product Selected</h2>";
+if(!id){
+document.getElementById("productBox").innerHTML="<h2>No Product Selected</h2>";
+}else{
+
+fetch(API)
+.then(res=>res.json())
+.then(data=>{
+const product=data.find(p=>p.id==id);
+
+if(!product){
+document.getElementById("productBox").innerHTML="<h2>Product Not Found</h2>";
+return;
 }
 
-fetch(apiURL)
-.then(res => res.json())
-.then(data => {
-
-    const product = data.find(p => p.id == productId);
-
-    if(!product){
-        document.body.innerHTML = "<h2>Product Not Found</h2>";
-        return;
-    }
-
-    document.getElementById("pname").innerText = product.name;
-    document.getElementById("pimage").src = product.image;
-    document.getElementById("pprice").innerText = "৳ " + product.price;
-    document.getElementById("poldprice").innerText = "৳ " + product.oldprice;
-    document.getElementById("pdesc").innerText = product.description;
-
-})
-.catch(error => {
-    document.body.innerHTML = "<h2>Data Load Error</h2>";
+document.getElementById("productBox").innerHTML=`
+<img src="${product.image}">
+<h2>${product.name}</h2>
+<div class="old">৳${product.oldprice}</div>
+<div class="price">৳${product.price}</div>
+<p>${product.description}</p>
+<a href="checkout.html?id=${product.id}" class="btn">Order Now</a>
+`;
 });
+
+}
 
 </script>
 
